--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       </section>
       <section class="section section-two">
         <div class="container">
-          <h2>Our strengths</h2>
+          <h2 lass="visually-hidden">Our strengths</h2>
           <ul class="list">
-            <li>
+            <li class="strengths-list-element">
               <h3 class="strengths-title">Strategy</h3>
               <p class="strengths-description">
                 Our goal is to identify the business problem to walk away with
@@ -97,8 +97,10 @@
                 width="264"
                 alt="Photo of Mark Guerrero"
               />
-              <h3 class="employee-name">Mark Guerrero</h3>
-              <p class="employee-position">Product Designer</p>
+              <div class="employee-text">
+                <h3 class="employee-name">Mark Guerrero</h3>
+                <p class="employee-position">Product Designer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -106,8 +108,10 @@
                 width="264"
                 alt="Photo of Tom Ford"
               />
-              <h3 class="employee-name">Tom Ford</h3>
-              <p class="employee-position">Frontend Developer</p>
+              <div class="employee-text">
+                <h3 class="employee-name">Tom Ford</h3>
+                <p class="employee-position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -115,8 +119,10 @@
                 width="264"
                 alt="Photo of Camila Garcia"
               />
-              <h3 class="employee-name">Camila Garcia</h3>
-              <p class="employee-position">Marketing</p>
+              <div class="employee-text">
+                <h3 class="employee-name">Camila Garcia</h3>
+                <p class="employee-position">Marketing</p>
+              </div>
             </li>
             <li class="team-list">
               <img
@@ -124,8 +130,10 @@
                 width="264"
                 alt="Photo of Daniel Wilson"
               />
-              <h3 class="employee-name">Daniel Wilson</h3>
-              <p class="employee-position">UI Designer</p>
+              <div class="employee-text">
+                <h3 class="employee-name">Daniel Wilson</h3>
+                <p class="employee-position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -133,11 +141,13 @@
       <section class="section section-four">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
-          <ul class="list">
-            <li>
+          <ul class="list portfolio-list">
+            <li class="portfolio-list-element">
               <img src="./images/imga.jpg" width="360" alt="Apps wallpaper" />
-              <h3 class="photo-title">Banking App</h3>
-              <p class="photo-mark">App</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Banking App</h3>
+                <p class="photo-mark">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -145,8 +155,10 @@
                 width="360"
                 alt="Payment with phone"
               />
-              <h3 class="photo-title">Cashless Payment</h3>
-              <p class="photo-mark">Marketing</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Cashless Payment</h3>
+                <p class="photo-mark">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -154,18 +166,24 @@
                 width="360"
                 alt="Laptop and smart phone"
               />
-              <h3 class="photo-title">Meditation App</h3>
-              <p class="photo-mark">App</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Meditation App</h3>
+                <p class="photo-mark">App</p>
+              </div>
             </li>
             <li>
               <img src="./images/imgd.jpg" width="360" alt="Car" />
-              <h3 class="photo-title">Taxi Service</h3>
-              <p class="photo-mark">Marketing</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Taxi Service</h3>
+                <p class="photo-mark">Marketing</p>
+              </div>
             </li>
             <li>
               <img src="./images/imge.jpg" width="360" alt="Phone wallpapers" />
-              <h3 class="photo-title">Screen Illustrations</h3>
-              <p class="photo-mark">Design</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Screen Illustrations</h3>
+                <p class="photo-mark">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -173,8 +191,10 @@
                 width="360"
                 alt="Girl in the orange sweater"
               />
-              <h3 class="photo-title">Online Courses</h3>
-              <p class="photo-mark">Marketing</p>
+              <div class="photo-text">
+                <h3 class="photo-title">Online Courses</h3>
+                <p class="photo-mark">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
