--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </section>
       <section class="section section-two">
         <div class="container">
-          <h2 lass="visually-hidden">Our strengths</h2>
+          <h2 class="visually-hidden">Our strengths</h2>
           <ul class="list">
             <li class="strengths-list-element">
               <h3 class="strengths-title">Strategy</h3>
@@ -63,21 +63,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="strengths-list-element">
               <h3 class="strengths-title">Punctuality</h3>
               <p class="strengths-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="strengths-list-element">
               <h3 class="strengths-title">Diligence</h3>
               <p class="strengths-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="strengths-list-element">
               <h3 class="strengths-title">Technologies</h3>
               <p class="strengths-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -149,7 +149,7 @@
                 <p class="photo-mark">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-element">
               <img
                 src="./images/imgb.jpg"
                 width="360"
@@ -160,7 +160,7 @@
                 <p class="photo-mark">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-element">
               <img
                 src="./images/imgc.jpg"
                 width="360"
@@ -171,21 +171,21 @@
                 <p class="photo-mark">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-element">
               <img src="./images/imgd.jpg" width="360" alt="Car" />
               <div class="photo-text">
                 <h3 class="photo-title">Taxi Service</h3>
                 <p class="photo-mark">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-element">
               <img src="./images/imge.jpg" width="360" alt="Phone wallpapers" />
               <div class="photo-text">
                 <h3 class="photo-title">Screen Illustrations</h3>
                 <p class="photo-mark">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-element">
               <img
                 src="./images/imgf.jpg"
                 width="360"
