--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </nav>
         <address class="adress">
-          <ul class="list">
+          <ul class="list adress-list">
             <li>
               <a class="link contacts" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
